# reference-infrastructure

./: .dockerignore  .envrc  .gitignore  .sops.yaml  README.md  flake.nix  panfactum.yaml
.aws/: config
.kube/: cluster_info  (+1 more)
services/bi/: .gitignore  DATA_STRUCTURE.md  README.md  debug_view.sql  export.csv  fix_view.sql  flake.nix  import_sqlite.ts  import_to_duckdb.ts  package.json  pyproject.toml  refresh_duckdb.sh  setup_duckdb.sh  total_hours.sql  tsconfig.json  updated_task_projects_view.sql
services/bi/data/asana/custom_fields/: 2025_04_29_1745945228535_0.jsonl
services/bi/data/asana/portfolios/: 2025_04_29_1745945228535_0.jsonl
services/bi/data/asana/portfolios_compact/: 2025_04_29_1745945228535_0.jsonl
services/bi/data/asana/portfolios_memberships/: 2025_04_29_1745945228535_0.jsonl
services/bi/data/asana/projects/: 2025_04_29_1745945228535_0.jsonl
services/bi/data/asana/users/: 2025_04_29_1745945228535_0.jsonl
services/bi/data/asana/workspaces/: 2025_04_29_1745945228535_0.jsonl
services/bi/dbt/: README.md  dbt_project.yml  generate_clean_sources.sh  generate_source_models.sh  generate_sources.sh  generate_sources.ts  profiles.yml  test.yml
services/bi/dbt/example/: test.sql
services/bi/dbt/macros/: custom_schema.sql  generate_jsonl_sources.sql  generate_sources_yml.sql  test_jsonl_loading.sql  write_sources_yml.sql
services/bi/dbt/models/: README.md  sources.yml  sources.yml.bak
services/bi/dbt/reports/: evidence.config.yaml
services/bi/dbt/staging/: stg_jsonl_data.sql
services/bi/models/: .user.yml  dbt_project.yml  profiles.yml
(+170 files in other folders)
